# pydata

./: .gitignore  README.md  pyproject.toml
.github/: run.sh
.github/workflows/: ci.yml
src/pydata/: __init__.py  listnode.py  treenode.py
tests/: test_listnode.py  test_treenode.py
